
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_14__ TYPE_7__ ;
typedef struct TYPE_13__ TYPE_6__ ;
typedef struct TYPE_12__ TYPE_5__ ;
typedef struct TYPE_11__ TYPE_4__ ;
typedef struct TYPE_10__ TYPE_3__ ;
typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct memory_region {int size; int address; } ;
struct TYPE_14__ {int Count; TYPE_6__* List; } ;
struct TYPE_12__ {int Count; TYPE_4__* PartialDescriptors; } ;
struct TYPE_13__ {TYPE_5__ PartialResourceList; } ;
struct TYPE_8__ {int QuadPart; } ;
struct TYPE_9__ {int Length; TYPE_1__ Start; } ;
struct TYPE_10__ {TYPE_2__ Memory; } ;
struct TYPE_11__ {int Type; TYPE_3__ u; } ;
typedef char* LPTSTR ;
typedef int * LPBYTE ;
typedef int * HKEY ;
typedef scalar_t__ DWORD ;
typedef TYPE_7__ CM_RESOURCE_LIST ;


 int ERROR_SUCCESS ;
 int HKEY_LOCAL_MACHINE ;
 int RegOpenKey (int ,char*,int **) ;
 int RegQueryValueEx (int *,char*,int ,scalar_t__*,int *,scalar_t__*) ;
 scalar_t__ malloc (scalar_t__) ;
 int printf (char*) ;

DWORD parse_memory_map(struct memory_region *regions) {
 HKEY hKey = ((void*)0);
 LPTSTR pszSubKey = L"Hardware\\ResourceMap\\System Resources\\Physical Memory";
 LPTSTR pszValueName = L".Translated";
 LPBYTE lpData = ((void*)0);
 DWORD dwLength = 0, count = 0, type = 0;;

 if (!RegOpenKey(HKEY_LOCAL_MACHINE, pszSubKey, &hKey) == ERROR_SUCCESS)
 {
  printf("[*] Could not get reg key\n");
  return 0;
 }

 if (!RegQueryValueEx(hKey, pszValueName, 0, &type, ((void*)0), &dwLength) == ERROR_SUCCESS)
 {
  printf("[*] Could not query hardware key\n");
  return 0;
 }

 lpData = (LPBYTE)malloc(dwLength);
 RegQueryValueEx(hKey, pszValueName, 0, &type, lpData, &dwLength);

 CM_RESOURCE_LIST *resource_list = (CM_RESOURCE_LIST *)lpData;

 for (int i = 0; i < resource_list->Count; i++) {
  for (int j = 0; j < resource_list->List[0].PartialResourceList.Count; j++) {
   if (resource_list->List[i].PartialResourceList.PartialDescriptors[j].Type == 3) {
    regions->address = resource_list->List[i].PartialResourceList.PartialDescriptors[j].u.Memory.Start.QuadPart;
    regions->size = resource_list->List[i].PartialResourceList.PartialDescriptors[j].u.Memory.Length;
    regions++;
    count++;
   }
  }
 }

 return count;
}
